fix a bug where blog items had a wrong alignment on Iphone 6

--- a/django-dispensa/wheelie/client/scss/layout/_blog-index.scss
+++ b/django-dispensa/wheelie/client/scss/layout/_blog-index.scss
@@ -167,6 +167,7 @@ body {
 }
 
 .blog-index-container {
+  align-items: center;
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
@@ -187,7 +188,7 @@ body {
   }
 
   @media #{$small} {
-    flex-direction: row;
+    flex-direction: column;
     flex-wrap: wrap;
     justify-content: space-around;
     padding: 0;
